navbar collapse issue fixed and added login link

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,6 +25,10 @@ input, select {
     width: 250px;
 }
 
+.navbar input{
+    margin-bottom: 0px;
+}
+
 #orientation {
     vertical-align: super;
 }
